--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -24,7 +24,6 @@
             android:name="com.example.shoppinglist.MainActivity"
             android:label="@string/app_name"
             android:uiOptions="splitActionBarWhenNarrow" >
-"
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,7 +32,8 @@
         </activity>
         <activity
             android:name="com.example.shoppinglist.CategoryActivity"
-            android:label="@string/title_activity_category" >
+            android:label="@string/title_activity_category"
+            android:uiOptions="splitActionBarWhenNarrow" >
         </activity>
 
         <provider
@@ -50,6 +50,15 @@
         <activity
             android:name="com.example.shoppinglist.DeleteList"
             android:label="@string/title_activity_delete_list" >
+        </activity>
+        <activity
+            android:name="com.example.shoppinglist.AddItemActivity"
+            android:label="@string/title_activity_add_item"
+            android:uiOptions="splitActionBarWhenNarrow" >
+        </activity>
+        <activity
+            android:name="com.example.shoppinglist.DeleteItemList"
+            android:label="@string/title_activity_delete_item_list" >
         </activity>
     </application>
 
