--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:icon="@drawable/shopping_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="com.example.shoppinglist.MainActivity"
             android:label="@string/app_name"
@@ -45,7 +46,8 @@
 
         <activity
             android:name="com.example.shoppinglist.SettingsActivityOption"
-            android:label="@string/title_activity_settings" >
+            android:label="@string/title_activity_settings"
+            android:uiOptions="splitActionBarWhenNarrow" >
         </activity>
         <activity
             android:name="com.example.shoppinglist.DeleteList"
@@ -54,12 +56,23 @@
         <activity
             android:name="com.example.shoppinglist.AddItemActivity"
             android:label="@string/title_activity_add_item"
-            android:uiOptions="splitActionBarWhenNarrow" >
+            android:uiOptions="splitActionBarWhenNarrow"
+             >
         </activity>
         <activity
             android:name="com.example.shoppinglist.DeleteItemList"
             android:label="@string/title_activity_delete_item_list" >
         </activity>
+        <activity
+            android:name="com.example.shoppinglist.AddTimeDate"
+            android:label="@string/title_activity_add_time_date"
+            android:uiOptions="splitActionBarWhenNarrow" >
+        </activity>
+    	<receiver android:name="TimeAlarm">
+    	    <intent-filter >
+    	        <action android:name="WorkAlarm"/>
+    	    </intent-filter>
+    	</receiver>
     </application>
-
+	
 </manifest>
