--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,6 @@
         android:icon="@drawable/shopping_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <activity
             android:name="com.example.shoppinglist.MainActivity"
             android:label="@string/app_name"
@@ -56,8 +55,7 @@
         <activity
             android:name="com.example.shoppinglist.AddItemActivity"
             android:label="@string/title_activity_add_item"
-            android:uiOptions="splitActionBarWhenNarrow"
-             >
+            android:uiOptions="splitActionBarWhenNarrow" >
         </activity>
         <activity
             android:name="com.example.shoppinglist.DeleteItemList"
@@ -68,11 +66,17 @@
             android:label="@string/title_activity_add_time_date"
             android:uiOptions="splitActionBarWhenNarrow" >
         </activity>
-    	<receiver android:name="TimeAlarm">
-    	    <intent-filter >
-    	        <action android:name="WorkAlarm"/>
-    	    </intent-filter>
-    	</receiver>
+
+        <receiver android:name="com.example.shoppinglist.TimeAlarm" >
+            <intent-filter>
+                <action android:name="WorkAlarm" />
+            </intent-filter>
+        </receiver>
+
+        <activity
+            android:name="com.example.shoppinglist.EditActivity"
+            android:label="@string/title_activity_edit" >
+        </activity>
     </application>
-	
+
 </manifest>
