--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:allowBackup="true"
         android:icon="@drawable/shopping_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo.Light" >
         <activity
             android:name="com.example.shoppinglist.MainActivity"
             android:label="@string/app_name"
